<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlanetDetailActivity">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtPlanetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Name"
            />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
           >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"
                android:text="@string/lbl_planet_climate" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"
                android:text="@string/lbl_planet_diameter" />

            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:id="@+id/txtPlanetClimate"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />

            <TextView
                android:layout_row="1"
                android:layout_column="1"
                android:id="@+id/txtPlanetDiameter"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />

            <!---->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"
                android:text="@string/lbl_planet_gravity" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/lbl_planet_orbital_period" />

            <TextView
                android:layout_row="3"
                android:layout_column="0"
                android:id="@+id/txtPlanetGravity"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />

            <TextView
                android:layout_row="3"
                android:layout_column="1"
                android:id="@+id/txtPlanetOrbitalPeriod"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />

            <!---->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"
                android:text="@string/lbl_planet_population" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/lbl_planet_rotation_periode" />

            <TextView
                android:layout_row="5"
                android:layout_column="0"
                android:id="@+id/txtPlanetPopulation"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />

            <TextView
                android:layout_row="5"
                android:layout_column="1"
                android:id="@+id/txtPlanetRotationPeriod"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />


            <!---->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"
                android:text="@string/lbl_planet_surface_water" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_row="6"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:text="@string/lbl_planet_terrains" />

            <TextView
                android:layout_row="7"
                android:layout_column="0"
                android:id="@+id/txtPlanetSurfaceWater"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />

            <TextView
                android:layout_row="7"
                android:layout_column="1"
                android:id="@+id/txtPlanetTerrains"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />
        </GridLayout>
        <LinearLayout
            android:id="@+id/layout_people"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_planet_peoples"
                android:gravity="center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/listePeoples"
                android:scrollbars="vertical"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>