<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PeopleDetailActivity">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtPeopleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            tools:text="Name"
            />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"
                android:textStyle="bold"
                android:text="@string/lbl_people_birth_year" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"
                android:textStyle="bold"
                android:text="@string/lbl_people_gender" />

            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:id="@+id/txtPeopleBirth"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />

            <TextView
                android:layout_row="1"
                android:layout_column="1"
                android:id="@+id/txtPeopleGender"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />

            <!---->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"
                android:textStyle="bold"
                android:text="@string/lbl_people_height" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:text="@string/lbl_people_mass" />

            <TextView
                android:layout_row="3"
                android:layout_column="0"
                android:id="@+id/txtPeopleHeight"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />

            <TextView
                android:layout_row="3"
                android:layout_column="1"
                android:id="@+id/txtPeopleMass"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />

            <!---->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"
                android:textStyle="bold"
                android:text="@string/lbl_people_eye" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:text="@string/lbl_people_hair" />

            <TextView
                android:layout_row="5"
                android:layout_column="0"
                android:id="@+id/txtPeopleEye"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />

            <TextView
                android:layout_row="5"
                android:layout_column="1"
                android:id="@+id/txtPeopleHair"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />


            <!---->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_columnWeight="1"
                android:textStyle="bold"
                android:text="@string/lbl_people_skin" />



            <TextView
                android:layout_row="7"
                android:layout_column="0"
                android:id="@+id/txtPeopleSkin"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content"
                tools:text="--" />


        </GridLayout>


    </LinearLayout>

</LinearLayout>